Refactoring and final touches

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,8 +13,9 @@
 .jumbotron {
   padding:70px 30px 70px 30px;
   margin:0px auto;
-  background: #9575CD ;
+  background: #c9c9c9 ;
   color:floralwhite;
+  margin-bottom: 10px;
 }
 
 .navbar-dark {
