--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,32 +14,10 @@
   padding:70px 30px 70px 30px;
   margin:0px auto;
   background: #c9c9c9 ;
-  color:floralwhite;
+  color:rgb(44, 43, 39);
   margin-bottom: 10px;
 }
 
 .navbar-dark {
-  background-color: rgb(24, 76, 248);
-}
-
-.page-enter{
-  opacity: 0.01,;
-  transform: translateX(-100%)
-}
-
-.page-enter-active{
-  opacity: 1;
-  transform: translateX(0%);
-  transition: all 300ms ease-in;
-}
-
-.page-exit{
-  opacity: 1;
-  transform: translateX(0%);
-}
-
-.page-exit-active{
-  opacity: 0.01;
-  transform: translateX(100%);  
-  transition: all 300ms ease-out;
+  background-color: rgb(2, 116, 59);
 }
