--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap');
+
 body {
   margin: 0;
-  background-color: #c9c9c9;
+  font-family: 'Rajdhani', sans-serif;
+  background-color: #faf0f0;
 }
